# trnsci

./: .gitignore  .pre-commit-config.yaml  404.html  BLOG_PROMPTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  pre-commit.yml  publish.yml  test.yml
TECHNICAL_BRIEF/: index.html
blog/: index.html
blog/AUTHOR_BRIEF/: index.html
blog/_template/: index.html
blog/hello-trnsci/: index.html
blog/the-dev-loop-just-got-a-lot-shorter/: index.html
blog/trnblas-four-hypotheses-one-profiler-trace-and-why-148-is-the-correct-answer/: index.html
blog/trnblas-fusing-df-mp2-energy-reduction-into-one-nki-kernel/: index.html
blog/trnblas-phase-3-from-215-slower-to-36-faster-in-one-kernel-boundary-move/: index.html
blog/trnfft-correcting-the-ozaki-precision-claim/: index.html
blog/trnfft-fft-is-a-gemm-and-then-it-isnt/: index.html
conda-recipes/: PR_DESCRIPTION.md  README.md
contributing/: index.html
cuda_rosetta/: index.html
deployment/: index.html
developing_kernels/: index.html
disclaimer/: index.html
docs/: TECHNICAL_BRIEF.md  contributing.md  cuda_rosetta.md  deployment.md  developing_kernels.md  disclaimer.md  index.md  installation.md  integration.md  libraries.md  nki_validation_status.md  roadmap.md  trainium_positioning.md  why.md
examples/: README.md  df_mp2_integrated.py  reverse_port_note.md
installation/: index.html
libraries/: index.html
nki_validation_status/: index.html
roadmap/: index.html
search/: search_index.json
stylesheets/: blog.css
tests/: test_integration.py
trainium_positioning/: index.html
trnblas/: index.html
trnfft/: index.html
trnrand/: index.html
trnsolver/: index.html
trnsparse/: index.html
trntensor/: index.html
why/: index.html
(+180 files in other folders)
